// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoductCard Debe incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
  <p>
    0
  </p>
  <button
    onClick={[Function]}
  >
    1
  </button>
</div>
`;

exports[`PoductCard debe mostrar el comopnente correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Children
  </h1>
</div>
`;
